After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728113 - Compilation fail on FreeBSD
Compilation fail on FreeBSD
Status: RESOLVED FIXED
Product: easytag
Classification: Other
Component: general
2.2.x
Other FreeBSD
: Normal normal
: 2.1
Assigned To: EasyTAG maintainer(s)
EasyTAG maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-04-13 14:08 UTC by Roman Bogorodskiy
Modified: 2014-04-14 11:07 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Roman Bogorodskiy 2014-04-13 14:08:33 UTC
I had a problem compiling easytag 2.2.0 on FreeBSD 10-STABLE with clang 3.3 x86_64.

The error was:

src/id3lib/c_wrapper.cpp:47:3: error: no previous prototype for function 'ID3Field_SetEncoding' [-Werror,-Wmissing-prototypes]
  ID3Field_SetEncoding(ID3Field *field, ID3_TextEnc enc)
  ^
src/id3lib/c_wrapper.cpp:58:3: error: no previous prototype for function 'ID3Field_GetEncoding' [-Werror,-Wmissing-prototypes]
  ID3Field_GetEncoding(const ID3Field *field)
  ^
src/id3lib/c_wrapper.cpp:69:3: error: no previous prototype for function 'ID3Field_IsEncodable' [-Werror,-Wmissing-prototypes]
  ID3Field_IsEncodable(const ID3Field *field)
  ^
src/id3lib/c_wrapper.cpp:80:3: error: no previous prototype for function 'ID3Field_GetType' [-Werror,-Wmissing-prototypes]
  ID3Field_GetType(const ID3Field *field)
  ^
src/id3lib/c_wrapper.cpp:110:3: error: no previous prototype for function 'ID3Tag_GetMp3HeaderInfo' [-Werror,-Wmissing-prototypes]
  ID3Tag_GetMp3HeaderInfo(ID3Tag *tag)
  ^
5 errors generated.

I was able to cope with that using this patch:

http://svnweb.freebsd.org/ports/head/audio/easytag/files/patch-src-id3lib-c_wrapper.cpp?revision=351221&view=co&pathrev=351221
Comment 1 David King 2014-04-14 10:10:54 UTC
Thanks for the report. I cannot reproduce the warning with CLang 3.3 on Fedora, but the patch seems fine. Do you know the name and email address of person whom I should credit when committing the patch?
Comment 2 Roman Bogorodskiy 2014-04-14 10:48:40 UTC
The patch was created by me.
Comment 3 David King 2014-04-14 11:03:04 UTC
Thanks! I pushed the patch to master and easytag-2-2 branches. It will be in an upcoming 2.2.1 release, probably in a few weeks.
Comment 4 Roman Bogorodskiy 2014-04-14 11:07:23 UTC
Thanks for the quick response!