Fix C++ ID3 wrapper compilation

https://bugzilla.gnome.org/show_bug.cgi?id=728113